**9.1.0 (UNRELEASED)**

* Use pkg_resources to parse the entry points file to allow names with
  colons (:pull:`3901`)

* Return a failing exit status when `pip install`, `pip download`, or
  `pip wheel` is called with no requirements. (:issue:`2720`, :pull:`2721`)


* Add `--exclude-editable` to ``pip freeze`` to exclude editable packages
  from installed package list.

**9.0.1 (2016-11-06)**

* Correct the deprecation message when not specifying a --format so that it
  uses the correct setting name (``format``) rather than the incorrect one
  (``list_format``) (:issue:`4058`).

* Fix ``pip check`` to check all available distributions and not just the
  local ones (:issue:`4083`).

* Fix a crash on non ASCII characters from `lsb_release` (:issue:`4062`).

* Fix an SyntaxError in an an used module of a vendored dependency
  (:issue:`4059`).

* Fix UNC paths on Windows (:issue:`4064`).


**9.0.0 (2016-11-02)**

* **BACKWARD INCOMPATIBLE** Remove the attempted autodetection of requirement
  names from URLs, URLs must include a name via ``#egg=``.

* **DEPRECATION** ``pip install --egg`` have been deprecated and will be
  removed in the future. This "feature" has a long list of drawbacks which
  break nearly all of pip's other features in subtle and hard-to-diagnose
  ways.

* **DEPRECATION** ``--default-vcs`` option (:issue:`4052`).

* **WARNING** pip 9 cache can break forward compatibility with previous pip
  versions if your package repository allows chunked responses (:issue:`4078`).

* Add a ``pip check`` command to check installed packages dependencies
  (:pull:`3750`).

* Add option allowing user to abort pip operation if file/directory exists

* Add Appveyor CI

* Uninstall existing packages when performing an editable installation of
  the same packages (:issue:`1548`).

* ``pip show`` is less verbose by default. ``--verbose`` prints multiline fields.
  (:pull:`3858`).

* Add optional column formatting to ``pip list`` (:issue:`3651`).
